...
    ]);

    return (
        <SafeAreaView style={[globalStyles.container, { justifyContent: 'center' }]}>
            <TextInput
                style={style.input}
                placeholder="Digite seu e-mail"
                placeholderTextColor="#8B90A0"
                autoCapitalize="none"
                autoCorrect={false}
                value={email}
                onChangeText={setEmail}
                keyboardType="email-address"
                editable={!loading}
            />
            <TextInput
                style={style.input}
                placeholder="Digite sua senha"
                placeholderTextColor="#8B90A0"
                autoCapitalize="none"
                autoCorrect={false}
                value={password}
                onChangeText={setPassword}
                secureTextEntry
                editable={!loading}
            />

            <Pressable style={style.btn} onPress={handleSignIn} disabled={loading}>
                <Text style={style.btnText}>{loading ? 'Entrando...' : 'Fazer Login'}</Text>
            </Pressable>

            <Pressable style={[style.biometricBtn, biometricDisabled && style.disabledBtn]} onPress={handleBiometricSignIn} disabled={biometricDisabled}>
                <FontAwesome5 name="fingerprint" size={24} color={palette.darkBlue} />
                <Text style={[style.biometricText, biometricDisabled && style.disabledText]}>Entrar com Biometria</Text>
            </Pressable>
...
